[package]
name = "text-to-podcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Your dependencies will go here. For example:
actix-web = "4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6.2"
reqwest = { version = "0.11", features = ["json"] }
actix-cors = "0.6.5"
dotenv = "0.15.0"
